# ofdreader

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml
examples/: extract_text.py
src/ofdreader/: __init__.py  _constants.py  _package.py  _xml.py  convert.py  exceptions.py  models.py  reader.py  writer.py
tests/: conftest.py  test_reader.py  test_writer.py
tests/fixtures/: sample.ofd
tests/fixtures/xml_only/: OFD.xml
tests/fixtures/xml_only/Doc_0/: Document.xml  PublicRes.xml
tests/fixtures/xml_only/Doc_0/Pages/Page_0/: Content.xml
tests/fixtures/xml_only/Doc_0/Pages/Page_1/: Content.xml
