[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ofdreader"
version = "0.1.0"
description = "Read and write OFD (GB/T 33190) documents with a PyPDF2-like API."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "PYOFD Contributors" }]
keywords = ["ofd", "GB/T 33190", "document", "parser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
    "Topic :: Office/Business :: Office Suites",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/ofdreader"]

[tool.hatch.build.targets.sdist]
packages = ["src/ofdreader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
pythonVersion = "3.10"
extraPaths = ["src"]

[tool.basedpyright]
extraPaths = ["src"]
